# script-languages

./: README.md
lab2/: README.md  pyproject.toml  server.py
lab3/: README.md  pyproject.toml
lab4/: .pre-commit-config.yaml  Makefile  README.md  main.py  posts.db  pyproject.toml
lab4/src/api/: api.py
lab4/src/config/: config.py
lab4/src/store/: model.py  store.py
lab5/: README.md  main.py  pyproject.toml
lab5/app/: __init__.py  add_dialog.py  fetch_posts.py  main_window.py
lab5/core/: config.py
lab5/http_client/: __init__.py  base.py  jp.py
lab5/schemas/: __init__.py  post.py
lab5/store/: __init__.py  database.py  models.py  post_repository.py
lab6/: README.md  main.py  pyproject.toml
