[tool.poetry]
name = "lab6"
version = "0.1.0"
description = ""
authors = ["FranChesK0"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "=5.15.10"
pyqt5-qt5 = "=5.15.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
